# agentcafe

./: .drone.yml  .gitignore  Cargo.toml  README.md
apps/macos/: Package.swift  README.md
apps/windows-wpf/: AgentCafe.Windows.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md
apps/windows-wpf/Models/: DiagnosticModels.cs
apps/windows-wpf/Services/: SidecarClient.cs
apps/windows-wpf/ViewModels/: MainViewModel.cs
core/agentcafe-cli/: Cargo.toml
core/agentcafe-cli/src/: main.rs
core/agentcafe-core/: Cargo.toml
core/agentcafe-core/src/: lib.rs  models.rs  redaction.rs  scanner.rs
core/agentcafe-core/tests/: doctor.rs
core/agentcafe-sidecar/: Cargo.toml
core/agentcafe-sidecar/src/: main.rs
core/agentcafe-sidecar/tests/: ipc.rs
docs/: architecture.md  config-sources.md  customer-alpha-release-plan.md  development-plan.md  ipc-contract.md  mvp-roadmap.md  mvp1-acceptance.md  mvp1-release-notes.md  mvp1-risk-copy.md  mvp2-write-draft.md  product-plan.md  security-checklist.md  security-model.md  ui-product-spec.md
fixtures/claude/: README.md
fixtures/codex/: README.md
fixtures/diagnostic/: README.md
fixtures/mvp2/: README.md
schemas/: config-apply.schema.json  config-diff.schema.json  diagnostic-report.schema.json  snapshot-manifest.schema.json
scripts/: package-alpha.sh
scripts/ci/: minio-upload.sh  version.sh  windows-alpha-release.ps1  windows-minio-upload.ps1  windows-version.ps1
tests/integration/: validate-diagnostic-fixtures.mjs  validate-mvp2-fixtures.mjs  validate-native-ui-contracts.mjs
(+31 files in other folders)
