[workspace]
members = [
  "core/agentcafe-core",
  "core/agentcafe-cli",
  "core/agentcafe-sidecar"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
jsonschema = "0.26"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.15"
thiserror = "2.0"
toml = "0.8"
uuid = { version = "1.11", features = ["v4"] }
wait-timeout = "0.2"
