[package]
name = "agentcafe-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
jsonschema.workspace = true
tempfile.workspace = true
